tests/invalid/runtime/list_pop_empty_runtime.pts
function consume(list<int> xs) : void {
    xs.pop();
}

function main() : void {
    list<int> xs = [1];
    xs.pop();
    consume(xs);
}
